# cac-24262-fullstack-python

./: .gitignore  Dockerfile  LICENSE  README.md  build.sh  docker-compose.yml  init.sql  pyproject.toml  render.yaml  requirements.txt
clase_10/: align.css  alineaciones.html  autofit.css  autofit.html  grid.css  index.html  sample.css  sample.html
clase_11/: index.html  main.js
clase_16/: main.js  main2.js
clase_17/: index.html  main.js  mainHtml.js
clase_18/: form.html  index.html  main.js
clase_19/: generators.js  index.html  main.js  repaso.js  style.css
clase_2/: index.html
clase_20/: index.html
clase_21/: index.html
clase_22/: Dockerfile  docker-compose.yml  index.html
clase_24/: creations.sql  inserts.sql  selects.sql
clase_25/: groups.sql  joins.sql  sample.ipynb
clase_26/: main.ipynb  main.py
clase_27/: listas.ipynb  strings.ipynb
clase_28/: funciones.ipynb
clase_29/: clases.ipynb
clase_3/: index.html  signin.html
clase_30/: clases.ipynb  clases_2.ipynb
clase_33/: notas.txt  notas2.txt
clase_4/: detail.html  index.html  register.html
clase_5/: detail.html  index.html  register.html
clase_6/: fuentes.html  index.html  main.css
clase_7/: index.html  main.css  position.css  position.html  pseudoclass.html
clase_8/: animations.css  animations.html  index.html  main.css  transform.css  transform.html  transitions.css  transitions.html
clase_9/: flexbox.css  flexbox.html  flexbox2.css  flexbox2.html  index.html  mediaqueries.css
docs/: index.html  register.html
fapi/: requirements.txt
src/: app.py  gconfig.py  (+1 more)
(+11 files in other folders)
